Add basic markup

--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
   <meta name="description" content="My stuff">
   <meta name="author" content="kamyl">
 
+  <link rel="stylesheet" href="./style.css">
+
   <title>Kamil Cybulski</title>
 </head>
 <body>
-  Hello world!
+  <header>
+    <h1 class="title">Kamil Cybulski</h1>
+    <h2 class="subtitle">Web developer</h2>
+  </header>
+  <main>
+    <div class="grid">
+      <div class="project"></div>
+      <div class="project"></div>
+      <div class="project"></div>
+      <div class="project"></div>
+      <div class="project"></div>
+      <div class="project"></div>
+    </div>
+  </main>
+  <footer>
+    <div class="email">send me an email</div>
+    <div class="github">see my profile on github</div>
+  </footer>
 </body>
 </html>
