Add header styling

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
   <meta name="description" content="My stuff">
   <meta name="author" content="kamyl">
 
+  <link
+    href="https://fonts.googleapis.com/css?family=Khula:300"
+    rel="stylesheet"
+  >
+
   <link rel="stylesheet" href="./style.css">
 
   <title>Kamil Cybulski</title>
 </head>
 <body>
-  <header>
-    <h1 class="title">Kamil Cybulski</h1>
-    <h2 class="subtitle">Web developer</h2>
+  <header class="header">
+    <h1 class="header__title">Kamil Cybulski</h1>
+    <h2 class="header__subtitle">Web developer</h2>
   </header>
   <main>
     <div class="grid">
