Add basic grid layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1 class="header__title">Kamil Cybulski</h1>
     <h2 class="header__subtitle">Web developer</h2>
   </header>
-  <main>
+  <main class="main">
     <div class="grid">
       <div class="project"></div>
       <div class="project"></div>
