Upgrade main and footer styles

--- a/index.html
+++ b/index.html
@@ -23,17 +23,41 @@
   </header>
   <main class="main">
     <div class="grid">
-      <div class="project"></div>
-      <div class="project"></div>
-      <div class="project"></div>
-      <div class="project"></div>
-      <div class="project"></div>
-      <div class="project"></div>
+      <div class="project">
+        <div class="overlay_orange"></div>
+      </div>
+      <div class="project">
+          <div class="overlay_blue"></div>
+      </div>
+      <div class="project">
+          <div class="overlay_pink"></div>
+      </div>
+      <div class="project">
+          <div class="overlay_cyan"></div>
+      </div>
+      <div class="project">
+          <div class="overlay_purple"></div>
+      </div>
+      <div class="project">
+          <div class="overlay_green"></div>
+      </div>
     </div>
   </main>
-  <footer>
-    <div class="email">send me an email</div>
-    <div class="github">see my profile on github</div>
+  <footer class="footer">
+    <div class="footer__divider"></div>
+    <a
+      href="https://github.com/KamilCybulski"
+      class="footer__link"
+    >
+      see my stuff on github
+    </a>
+    <a
+      href="mailto:kamillcybulski@gmail.comSubject=Mail%20from%20your%20website"
+      target="_blank"
+      class="footer__link"
+    >
+      Send me an email
+    </a>
   </footer>
 </body>
 </html>
