--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header__title">Kamil Cybulski</h1>
-    <h2 class="header__subtitle">Web developer</h2>
+    <div class="header__overlay">
+      <h1 class="header__title">Kamil Cybulski</h1>
+      <h2 class="header__subtitle">Web developer</h2>
+    </div>
   </header>
   <main class="main">
     <div class="grid">
@@ -52,8 +54,8 @@
       see my stuff on github
     </a>
     <a
-      href="mailto:kamillcybulski@gmail.comSubject=Mail%20from%20your%20website"
-      target="_blank"
+      href="mailto:kamillcybulski@gmail.com?Subject=Mail%20from%20your%20website"
+      target="_top"
       class="footer__link"
     >
       Send me an email
