--- a/index.html
+++ b/index.html
@@ -24,29 +24,30 @@
     </div>
   </header>
   <main class="main">
-    <div class="grid">
-      <div class="project">
-        <div class="overlay_orange"></div>
+    <section class="section aboutme">
+      <h2 class="section__title">
+        About me
+      </h2>
+      <p class="section__text">
+        Hi, I'm Kamil, a self-taught web developer. I like writing codes, making things work and learning new stuff. Also I like bicycles, video games and green tea. Thanks for reading. Nulla voluptate fugiat culpa ut laboris qui commodo dolore non excepteur sint culpa.Nisi commodo voluptate consequat magna sunt.
+      </p>
+    </section>
+    <div class="divider"></div>
+    <section class="section">
+      <h2 class="section__title">
+        My work
+      </h2>
+      <div class="showcase">
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
       </div>
-      <div class="project">
-          <div class="overlay_blue"></div>
-      </div>
-      <div class="project">
-          <div class="overlay_pink"></div>
-      </div>
-      <div class="project">
-          <div class="overlay_cyan"></div>
-      </div>
-      <div class="project">
-          <div class="overlay_purple"></div>
-      </div>
-      <div class="project">
-          <div class="overlay_green"></div>
-      </div>
-    </div>
+    </section>
   </main>
   <footer class="footer">
-    <div class="footer__divider"></div>
     <a
       href="https://github.com/KamilCybulski"
       class="footer__link"
