--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         About me
       </h2>
       <p class="section__text">
-        Hi, I'm Kamil, a self-taught web developer. I like writing codes, making things work and learning new stuff. Also I like bicycles, video games and green tea. Thanks for reading. Nulla voluptate fugiat culpa ut laboris qui commodo dolore non excepteur sint culpa.Nisi commodo voluptate consequat magna sunt.
+        Hi, I'm Kamil, a self-taught web developer. I like writing codes, making things work and learning new stuff. Also I like bicycles, video games and green tea. Thanks for reading. Nulla voluptate fugiat culpa ut laboris qui commodo dolore non excepteur sint culpa. Nisi commodo voluptate consequat magna sunt.
       </p>
     </section>
     <div class="divider"></div>
@@ -38,12 +38,24 @@
         My work
       </h2>
       <div class="showcase">
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+        <div class="project">
+          <div class="project__caption"></div>
+        </div>
+        <div class="project">
+            <div class="project__caption"></div>
+        </div>
+        <div class="project">
+            <div class="project__caption"></div>
+        </div>
+        <div class="project">
+            <div class="project__caption"></div>
+        </div>
+        <div class="project">
+            <div class="project__caption"></div>
+        </div>
+        <div class="project">
+            <div class="project__caption"></div>
+        </div>
       </div>
     </section>
   </main>
