--- a/index.html
+++ b/index.html
@@ -39,22 +39,40 @@
       </h2>
       <div class="showcase">
         <div class="project">
-          <div class="project__caption"></div>
+          <div class="project__caption">
+            <h5 class="project__title">Towers of Hanoi solver</h5>
+            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution. Written in vanilla JS.</p>
+          </div>
         </div>
         <div class="project">
-            <div class="project__caption"></div>
+          <div class="project__caption">
+            <h5 class="project__title">Simon Game</h5>
+            <p class="project__description">Simple simon game implementation. Written in vanilla JS with heavy use of ES6 generators.</p>
+          </div>
         </div>
         <div class="project">
-            <div class="project__caption"></div>
+          <div class="project__caption">
+            <h5 class="project__title">Towers of Hanoi solver</h5>
+            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution.</p>
+          </div>
         </div>
         <div class="project">
-            <div class="project__caption"></div>
+          <div class="project__caption">
+            <h5 class="project__title">Towers of Hanoi solver</h5>
+            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution.</p>
+          </div>
         </div>
         <div class="project">
-            <div class="project__caption"></div>
+          <div class="project__caption">
+            <h5 class="project__title">Towers of Hanoi solver</h5>
+            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution.</p>
+          </div>
         </div>
         <div class="project">
-            <div class="project__caption"></div>
+          <div class="project__caption">
+            <h5 class="project__title">Towers of Hanoi solver</h5>
+            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -74,5 +92,7 @@
       Send me an email
     </a>
   </footer>
+
+  <script src="./index.js"></script>
 </body>
 </html>
