add project links and images

--- a/index.html
+++ b/index.html
@@ -38,46 +38,46 @@
         My work
       </h2>
       <div class="showcase">
-        <div class="project">
+        <div class="project project1">
+          <a href="https://kamilcybulski.github.io/resume-template/" class="project__link"></a>
+          <div class="project__caption">
+            <h5 class="project__title">Resume Template</h5>
+            <p class="project__description">Material resume template. Complex, responsive layout made with plain SCSS.</p>
+        </div>
+            </div>
+        <div class="project project2">
           <a href="https://kamilcybulski.github.io/Towers-of-Hanoi/" class="project__link"></a>
           <div class="project__caption">
             <h5 class="project__title">Towers of Hanoi solver</h5>
             <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution. Written in vanilla JS.</p>
           </div>
         </div>
-        <div class="project">
-          <a href="https://kamilcybulski.github.io/Towers-of-Hanoi/" class="project__link"></a>
+        <div class="project project3">
+          <a href="http://kc-simon.surge.sh/" class="project__link"></a>
           <div class="project__caption">
             <h5 class="project__title">Simon Game</h5>
             <p class="project__description">Simple simon game implementation. Written in vanilla JS with heavy use of ES6 generators.</p>
           </div>
         </div>
-        <div class="project">
-          <a href="https://kamilcybulski.github.io/Towers-of-Hanoi/" class="project__link"></a>
+        <div class="project project4">
+          <a href="http://kc-voter.surge.sh/#/" class="project__link"></a>
           <div class="project__caption">
-            <h5 class="project__title">Towers of Hanoi solver</h5>
-            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution.</p>
+            <h5 class="project__title">Voting app</h5>
+            <p class="project__description">Voting app that allows users to create polls and vote in them. Made with Firebase and ReactJS.</p>
           </div>
         </div>
-        <div class="project">
-          <a href="https://kamilcybulski.github.io/Towers-of-Hanoi/" class="project__link"></a>
+        <div class="project project5">
+          <a href="https://ruthless-pantocrator.herokuapp.com/#/" class="project__link"></a>
           <div class="project__caption">
-            <h5 class="project__title">Towers of Hanoi solver</h5>
-            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution.</p>
+            <h5 class="project__title">Nigtlife coordinator</h5>
+            <p class="project__description">App that allows users to search for bars and restaurants and mark if they are going to visit that place. Made with MongoDB, Express, ReactJS and Redux.</p>
           </div>
         </div>
-        <div class="project">
-          <a href="https://kamilcybulski.github.io/Towers-of-Hanoi/" class="project__link"></a>
+        <div class="project project6">
+          <a href="http://kcws.surge.sh/" class="project__link"></a>
           <div class="project__caption">
-            <h5 class="project__title">Towers of Hanoi solver</h5>
-            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution.</p>
-          </div>
-        </div>
-        <div class="project">
-          <a href="https://kamilcybulski.github.io/Towers-of-Hanoi/" class="project__link"></a>
-          <div class="project__caption">
-            <h5 class="project__title">Towers of Hanoi solver</h5>
-            <p class="project__description">Towers of Hanoi solver that accepts a tower height between 5 and 10, and then displays a graphical solution.</p>
+            <h5 class="project__title">WatchStock</h5>
+            <p class="project__description">Simple app that displays a graph to show current stock prices. Made with Firebase, ReactJS, Redux and Redux Saga.</p>
           </div>
         </div>
       </div>
