Fix footer link (mail)

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       see my stuff on github
     </a>
     <a
-      href="mailto:kamillcybulski@gmail.com?Subject=Mail%20from%20your%20website"
+      href="mailto:kamillcybulski@gmail.com"
       target="_top"
       class="footer__link"
     >
