Add divider to header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header__title">Kamil Cybulski</h1>
-    <h2 class="header__subtitle">Web developer</h2>
+    <div>
+      <h1 class="header__title">Kamil Cybulski</h1>
+      <h2 class="header__subtitle">Web developer</h2>
+    </div>
+    <div class="divider"></div>
   </header>
   <main class="main">
     <section class="section">
